tests/invalid/syntax/let_missing_eq.fig
// INVALID: Missing = in let statement
// Expected parse error: assignment operator required
let x 10
